test/e2e-lockcontention/ccnp-s3-cidr.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-s3-cidr
  annotations:
    description: "Reproducer for write-lock contention bug - broad toCIDR rules"
spec:
  endpointSelector:
    matchLabels:
      role: server
  egress:
    - toCIDR:
        - 54.231.0.0/16
        - 52.216.0.0/15
        - 18.34.0.0/19
        - 16.15.192.0/18
        - 16.182.0.0/16
        - 3.5.0.0/19
        - 44.192.134.240/28
        - 44.192.140.64/28
