test/e2e-lockcontention/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      role: server
  template:
    metadata:
      labels:
        role: server
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: server
          image: busybox:latest
          command: ["sleep", "infinity"]
